==> adafruit/Adafruit-PN532/Adafruit_PN532.cpp <==
 #include "Arduino.h"
 #include "WProgram.h"
#include <Wire.h>
 #define WIRE Wire
 #define WIRE Wire1
#include <SPI.h>
#include "Adafruit_PN532.h"
#define PN532_SPI_SETTING SPISettings(1000000, LSBFIRST, SPI_MODE0)
#define PN532_SPI_CLOCKDIV SPI_CLOCK_DIV16
#define PN532_PACKBUFFSIZ 64
    #define _BV(bit) (1<<(bit))

void Adafruit_PN532::begin() {
  if (_usingSPI) {
    // SPI initialization
    if (_hardwareSPI) {
      SPI.begin();
      SPI.setDataMode(SPI_MODE0);
      SPI.setBitOrder(LSBFIRST);
      SPI.setClockDivider(PN532_SPI_CLOCKDIV);
  
      #ifdef SPI_HAS_TRANSACTION
        SPI.beginTransaction(PN532_SPI_SETTING);
      #endif
    }
    digitalWrite(_ss, LOW);
    
    delay(1000);

    // not exactly sure why but we have to send a dummy command to get synced up
    pn532_packetbuffer[0] = PN532_COMMAND_GETFIRMWAREVERSION;
    sendCommandCheckAck(pn532_packetbuffer, 1);

    // ignore response!

    digitalWrite(_ss, HIGH);
    #ifdef SPI_HAS_TRANSACTION
      if (_hardwareSPI) SPI.endTransaction();
    #endif
  }
  else {
    // I2C initialization.
    WIRE.begin();

    // Reset the PN532  
    digitalWrite(_reset, HIGH);
    digitalWrite(_reset, LOW);
    delay(400);
    digitalWrite(_reset, HIGH);
  }
}

bool Adafruit_PN532::isready() {
  if (_usingSPI) {
    // SPI read status and check if ready.
    #ifdef SPI_HAS_TRANSACTION
      if (_hardwareSPI) SPI.beginTransaction(PN532_SPI_SETTING);
    #endif
    digitalWrite(_ss, LOW);
    delay(2); 
    spi_write(PN532_SPI_STATREAD);
    // read byte
    uint8_t x = spi_read();
    
    digitalWrite(_ss, HIGH);
    #ifdef SPI_HAS_TRANSACTION
      if (_hardwareSPI) SPI.endTransaction();
    #endif

    // Check if status is ready.
    return x == PN532_SPI_READY;
  }
  else {
    // I2C check if status is ready by IRQ line being pulled low.
    uint8_t x = digitalRead(_irq);
    return x == 0;
  }
}

void Adafruit_PN532::readdata(uint8_t* buff, uint8_t n) {
  if (_usingSPI) {
    // SPI write.
    #ifdef SPI_HAS_TRANSACTION
      if (_hardwareSPI) SPI.beginTransaction(PN532_SPI_SETTING);
    #endif
    digitalWrite(_ss, LOW);
    delay(2); 
    spi_write(PN532_SPI_DATAREAD);

    #ifdef PN532DEBUG
      Serial.print(F("Reading: "));
    #endif
    for (uint8_t i=0; i<n; i++) {
      delay(1);
      buff[i] = spi_read();
      #ifdef PN532DEBUG
        Serial.print(F(" 0x"));
        Serial.print(buff[i], HEX);
      #endif
    }

    #ifdef PN532DEBUG
      Serial.println();
    #endif

    digitalWrite(_ss, HIGH);
    #ifdef SPI_HAS_TRANSACTION
      if (_hardwareSPI) SPI.endTransaction();
    #endif
  }
  else {
    // I2C write.
    uint16_t timer = 0;
    
    delay(2); 

    #ifdef PN532DEBUG
      Serial.print(F("Reading: "));
    #endif
    // Start read (n+1 to take into account leading 0x01 with I2C)
    WIRE.requestFrom((uint8_t)PN532_I2C_ADDRESS, (uint8_t)(n+2));
    // Discard the leading 0x01
    i2c_recv();
    for (uint8_t i=0; i<n; i++) {
      delay(1);
      buff[i] = i2c_recv();
      #ifdef PN532DEBUG
        Serial.print(F(" 0x"));
        Serial.print(buff[i], HEX);
      #endif
    }
    // Discard trailing 0x00 0x00
    // i2c_recv();
        
    #ifdef PN532DEBUG
      Serial.println();
    #endif
  }
}

void Adafruit_PN532::writecommand(uint8_t* cmd, uint8_t cmdlen) {
  if (_usingSPI) {
    // SPI command write.
    uint8_t checksum;

    cmdlen++;
    
    #ifdef PN532DEBUG
      Serial.print(F("\nSending: "));
    #endif

    #ifdef SPI_HAS_TRANSACTION
      if (_hardwareSPI) SPI.beginTransaction(PN532_SPI_SETTING);
    #endif
    digitalWrite(_ss, LOW);
    delay(2);     // or whatever the delay is for waking up the board
    spi_write(PN532_SPI_DATAWRITE);

    checksum = PN532_PREAMBLE + PN532_PREAMBLE + PN532_STARTCODE2;
    spi_write(PN532_PREAMBLE);
    spi_write(PN532_PREAMBLE);
    spi_write(PN532_STARTCODE2);

    spi_write(cmdlen);
    spi_write(~cmdlen + 1);
   
    spi_write(PN532_HOSTTOPN532);
    checksum += PN532_HOSTTOPN532;

    #ifdef PN532DEBUG
      Serial.print(F(" 0x")); Serial.print(PN532_PREAMBLE, HEX);
      Serial.print(F(" 0x")); Serial.print(PN532_PREAMBLE, HEX);
      Serial.print(F(" 0x")); Serial.print(PN532_STARTCODE2, HEX);
      Serial.print(F(" 0x")); Serial.print(cmdlen, HEX);
      Serial.print(F(" 0x")); Serial.print(~cmdlen + 1, HEX);
      Serial.print(F(" 0x")); Serial.print(PN532_HOSTTOPN532, HEX);
    #endif

    for (uint8_t i=0; i<cmdlen-1; i++) {
      spi_write(cmd[i]);
      checksum += cmd[i];
      #ifdef PN532DEBUG
        Serial.print(F(" 0x")); Serial.print(cmd[i], HEX);
      #endif
    }
    
    spi_write(~checksum);
    spi_write(PN532_POSTAMBLE);
    digitalWrite(_ss, HIGH);
    #ifdef SPI_HAS_TRANSACTION
      if (_hardwareSPI) SPI.endTransaction();
    #endif

    #ifdef PN532DEBUG
      Serial.print(F(" 0x")); Serial.print(~checksum, HEX);
      Serial.print(F(" 0x")); Serial.print(PN532_POSTAMBLE, HEX);
      Serial.println();
    #endif
  }
  else {
    // I2C command write.
    uint8_t checksum;

    cmdlen++;
    
    #ifdef PN532DEBUG
      Serial.print(F("\nSending: "));
    #endif

    delay(2);     // or whatever the delay is for waking up the board

    // I2C START
    WIRE.beginTransmission(PN532_I2C_ADDRESS);
    checksum = PN532_PREAMBLE + PN532_PREAMBLE + PN532_STARTCODE2;
    i2c_send(PN532_PREAMBLE);
    i2c_send(PN532_PREAMBLE);
    i2c_send(PN532_STARTCODE2);

    i2c_send(cmdlen);
    i2c_send(~cmdlen + 1);
   
    i2c_send(PN532_HOSTTOPN532);
    checksum += PN532_HOSTTOPN532;

    #ifdef PN532DEBUG
      Serial.print(F(" 0x")); Serial.print(PN532_PREAMBLE, HEX);
      Serial.print(F(" 0x")); Serial.print(PN532_PREAMBLE, HEX);
      Serial.print(F(" 0x")); Serial.print(PN532_STARTCODE2, HEX);
      Serial.print(F(" 0x")); Serial.print(cmdlen, HEX);
      Serial.print(F(" 0x")); Serial.print(~cmdlen + 1, HEX);
      Serial.print(F(" 0x")); Serial.print(PN532_HOSTTOPN532, HEX);
    #endif

    for (uint8_t i=0; i<cmdlen-1; i++) {
      i2c_send(cmd[i]);
      checksum += cmd[i];
      #ifdef PN532DEBUG
        Serial.print(F(" 0x")); Serial.print(cmd[i], HEX);
      #endif
    }
    
    i2c_send(~checksum);
    i2c_send(PN532_POSTAMBLE);
    
    // I2C STOP
    WIRE.endTransmission();

    #ifdef PN532DEBUG
      Serial.print(F(" 0x")); Serial.print(~checksum, HEX);
      Serial.print(F(" 0x")); Serial.print(PN532_POSTAMBLE, HEX);
      Serial.println();
    #endif

  }
}

void Adafruit_PN532::spi_write(uint8_t c) {
  if (_hardwareSPI) {
    // Hardware SPI write.
    SPI.transfer(c);
  }
  else {
    // Software SPI write.
    int8_t i;
    digitalWrite(_clk, HIGH);

    for (i=0; i<8; i++) {
      digitalWrite(_clk, LOW);
      if (c & _BV(i)) {
        digitalWrite(_mosi, HIGH);
      } else {
        digitalWrite(_mosi, LOW);
      }    
      digitalWrite(_clk, HIGH);
    }
  }
}

uint8_t Adafruit_PN532::spi_read(void) {
  int8_t i, x;
  x = 0;

  if (_hardwareSPI) {
    // Hardware SPI read.
    x = SPI.transfer(0x00);
  }
  else {
    // Software SPI read.
    digitalWrite(_clk, HIGH);

    for (i=0; i<8; i++) {
      if (digitalRead(_miso)) {
        x |= _BV(i);
      }
      digitalWrite(_clk, LOW);
      digitalWrite(_clk, HIGH);
    }
  }

  return x;
}
