==> Rowbotronics/Adafruit-PN532/components/pn532/Adafruit_PN532.cpp <==
#include <SPI.h>
#include "Adafruit_PN532.h"
#define PN532DEBUG
#define MIFAREDEBUG
#define PN532_PACKBUFFSIZ 64
    #define _BV(bit) (1<<(bit))

void Adafruit_PN532::begin() {
  if (_usingSPI) {
    // SPI initialization
    if (_hardwareSPI) {
      spi_bus.init(_mosi, _miso, _clk, _ss);

      #ifdef SPI_HAS_TRANSACTION
        SPI.beginTransaction(PN532_SPI_SETTING);
      #else
        // SPI.setDataMode(SPI_MODE0);
        // SPI.setBitOrder(LSBFIRST);
        // SPI.setClockDivider(PN532_SPI_CLOCKDIV);
      #endif
    }
    gpio_set_level(_ss, 0);

    vTaskDelay(1000 / portTICK_PERIOD_MS);

    // not exactly sure why but we have to send a dummy command to get synced up
    pn532_packetbuffer[0] = PN532_COMMAND_GETFIRMWAREVERSION;
    sendCommandCheckAck(pn532_packetbuffer, 1);
    printf("test point 1");

    // ignore response!

    gpio_set_level(_ss, 1);
    #ifdef SPI_HAS_TRANSACTION
      if (_hardwareSPI) SPI.endTransaction();
    #endif
  }
  // else {
  //   // I2C initialization.
  //   WIRE.begin();

  //   // Reset the PN532
  //   gpio_set_level(_reset, 1);
  //   gpio_set_level(_reset, 0);
  //   vTaskDelay(400 / portTICK_PERIOD_MS);
  //   gpio_set_level(_reset, 1);
  //   vTaskDelay(10 / portTICK_PERIOD_MS);  // Small delay required before taking other actions after reset.
  //               // See timing diagram on page 209 of the datasheet, section 12.23.
  // }
}

bool Adafruit_PN532::isready() {
  if (_usingSPI) {
    // SPI read status and check if ready.
    #ifdef SPI_HAS_TRANSACTION
      if (_hardwareSPI) SPI.beginTransaction(PN532_SPI_SETTING);
    #endif
    gpio_set_level(_ss, 0);
    vTaskDelay(10 / portTICK_PERIOD_MS);
    spi_write(PN532_SPI_STATREAD);
    // read byte
    uint8_t x = spi_read();

    gpio_set_level(_ss, 1);
    #ifdef SPI_HAS_TRANSACTION
      if (_hardwareSPI) SPI.endTransaction();
    #endif

    // Check if status is ready.
    return x == PN532_SPI_READY;
  }
  else {
    // I2C check if status is ready by IRQ line being pulled low.
    uint8_t x = gpio_get_level(_irq);
    return x == 0;
  }
}

void Adafruit_PN532::readdata(uint8_t* buff, uint8_t n) {
  if (_usingSPI) {
    // SPI write.
    #ifdef SPI_HAS_TRANSACTION
      if (_hardwareSPI) SPI.beginTransaction(PN532_SPI_SETTING);
    #endif
    gpio_set_level(_ss, 0);
    vTaskDelay(10 / portTICK_PERIOD_MS);
    spi_write(PN532_SPI_DATAREAD);

    #ifdef PN532DEBUG
      printf("Reading: ");
    #endif
    for (uint8_t i=0; i<n; i++) {
      vTaskDelay(10 / portTICK_PERIOD_MS);
      buff[i] = spi_read();
      #ifdef PN532DEBUG
        printf(" 0x");
        printf("%x", buff[i]);
      #endif
    }

    #ifdef PN532DEBUG
      printf("\n");
    #endif

    gpio_set_level(_ss, 1);
    #ifdef SPI_HAS_TRANSACTION
      if (_hardwareSPI) SPI.endTransaction();
    #endif
  }
  // else {
  //   // I2C write.
  //   uint16_t timer = 0;

  //   vTaskDelay(10 / portTICK_PERIOD_MS);;

  //   #ifdef PN532DEBUG
  //     printf("Reading: ");
  //   #endif
  //   // Start read (n+1 to take into account leading 0x01 with I2C)
  //   WIRE.requestFrom((uint8_t)PN532_I2C_ADDRESS, (uint8_t)(n+2));
  //   // Discard the leading 0x01
  //   i2c_recv();
  //   for (uint8_t i=0; i<n; i++) {
  //     vTaskDelay(10 / portTICK_PERIOD_MS);
  //     buff[i] = i2c_recv();
  //     #ifdef PN532DEBUG
  //       printf(" 0x");
  //       printf("%x", buff[i]);
  //     #endif
  //   }
  //   // Discard trailing 0x00 0x00
  //   // i2c_recv();

  //   #ifdef PN532DEBUG
  //     printf("\n");
  //   #endif
  // }
}

void Adafruit_PN532::writecommand(uint8_t* cmd, uint8_t cmdlen) {
  if (_usingSPI) {
    // SPI command write.
    uint8_t checksum;

    cmdlen++;

    #ifdef PN532DEBUG
      printf("\nSending: ");
    #endif

    #ifdef SPI_HAS_TRANSACTION
      if (_hardwareSPI) SPI.beginTransaction(PN532_SPI_SETTING);
    #endif
    gpio_set_level(_ss, 0);
    vTaskDelay(10 / portTICK_PERIOD_MS);     // or whatever the delay is for waking up the board
    spi_write(PN532_SPI_DATAWRITE);

    checksum = PN532_PREAMBLE + PN532_PREAMBLE + PN532_STARTCODE2;
    spi_write(PN532_PREAMBLE);
    spi_write(PN532_PREAMBLE);
    spi_write(PN532_STARTCODE2);

    spi_write(cmdlen);
    spi_write(~cmdlen + 1);

    spi_write(PN532_HOSTTOPN532);
    checksum += PN532_HOSTTOPN532;

    #ifdef PN532DEBUG
    printf(" 0x"); printf("%x", (uint8_t)PN532_PREAMBLE);
      printf(" 0x"); printf("%x", (uint8_t)PN532_PREAMBLE);
      printf(" 0x"); printf("%x", (uint8_t)PN532_STARTCODE2);
      printf(" 0x"); printf("%x", (uint8_t)cmdlen);
      printf(" 0x"); printf("%x", (uint8_t)(~cmdlen + 1));
      printf(" 0x"); printf("%x", (uint8_t)PN532_HOSTTOPN532);
    #endif

    for (uint8_t i=0; i<cmdlen-1; i++) {
      spi_write(cmd[i]);
      checksum += cmd[i];
      #ifdef PN532DEBUG
        printf(" 0x"); printf("%x", (uint8_t)cmd[i]);
      #endif
    }

    spi_write(~checksum);
    spi_write(PN532_POSTAMBLE);
    gpio_set_level(_ss, 1);
    #ifdef SPI_HAS_TRANSACTION
      if (_hardwareSPI) SPI.endTransaction();
    #endif

    #ifdef PN532DEBUG
      printf(" 0x"); printf("%x", (uint8_t)~checksum);
      printf(" 0x"); printf("%x", (uint8_t)PN532_POSTAMBLE);
      printf("\n");
    #endif
  }
  // else {
  //   // I2C command write.
  //   uint8_t checksum;

  //   cmdlen++;

  //   #ifdef PN532DEBUG
  //     printf("\nSending: ");
  //   #endif

  //   vTaskDelay(10 / portTICK_PERIOD_MS);    // or whatever the delay is for waking up the board

  //   // I2C START
  //   WIRE.beginTransmission(PN532_I2C_ADDRESS);
  //   checksum = PN532_PREAMBLE + PN532_PREAMBLE + PN532_STARTCODE2;
  //   i2c_send(PN532_PREAMBLE);
  //   i2c_send(PN532_PREAMBLE);
  //   i2c_send(PN532_STARTCODE2);

  //   i2c_send(cmdlen);
  //   i2c_send(~cmdlen + 1);

  //   i2c_send(PN532_HOSTTOPN532);
  //   checksum += PN532_HOSTTOPN532;

  //   #ifdef PN532DEBUG
  //     printf(" 0x"); printf("%x", (uint8_t)PN532_PREAMBLE);
  //     printf(" 0x"); printf("%x", (uint8_t)PN532_PREAMBLE);
  //     printf(" 0x"); printf("%x", (uint8_t)PN532_STARTCODE2);
  //     printf(" 0x"); printf("%x", (uint8_t)cmdlen);
  //     printf(" 0x"); printf("%x", (uint8_t)(~cmdlen + 1));
  //     printf(" 0x"); printf("%x", (uint8_t)PN532_HOSTTOPN532);
  //   #endif

  //   for (uint8_t i=0; i<cmdlen-1; i++) {
  //     i2c_send(cmd[i]);
  //     checksum += cmd[i];
  //     #ifdef PN532DEBUG
  //       printf(" 0x"); printf("%x", (uint8_t)cmd[i]);
  //     #endif
  //   }

  //   i2c_send((uint8_t)~checksum);
  //   i2c_send((uint8_t)PN532_POSTAMBLE);

  //   // I2C STOP
  //   WIRE.endTransmission();

  //   #ifdef PN532DEBUG
  //     printf(" 0x"); printf("%x", (uint8_t)~checksum);
  //     printf(" 0x"); printf("%x", (uint8_t)PN532_POSTAMBLE);
  //     printf("\n");
  //   #endif

  // }
}

void Adafruit_PN532::spi_write(uint8_t c) {
  if (_hardwareSPI) {
    // Hardware SPI write.
    spi_bus.transferByte(c);
  }
  else {
    // Software SPI write.
    int8_t i;
    gpio_set_level(_clk, 1);

    for (i=0; i<8; i++) {
      gpio_set_level(_clk, 0);
      if (c & _BV(i)) {
        gpio_set_level(_mosi, 1);
      } else {
        gpio_set_level(_mosi, 0);
      }
      gpio_set_level(_clk, 1);
    }
  }
}

uint8_t Adafruit_PN532::spi_read(void) {
  int8_t i, x;
  x = 0;

  if (_hardwareSPI) {
    // Hardware SPI read.
    x = spi_bus.transferByte(0x00);
  }
  else {
    // Software SPI read.
    gpio_set_level(_clk, 1);

    for (i=0; i<8; i++) {
      if (gpio_get_level(_miso)) {
        x |= _BV(i);
      }
      gpio_set_level(_clk, 0);
      gpio_set_level(_clk, 1);
    }
  }

  return x;
}
